# byteosc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  boot.S  config.cmake  xmake.lua
arch/: arch-include.h.in  config-include.h.in
arch/aarch64/: boot.c  boot.cpp  percpu.c  psci.c  psci.cpp
arch/aarch64/asm/: boot.S
arch/aarch64/includes/: aarch64.h  msr.h  syscall.h
arch/includes/: config.h
arch/riscv/: boot.c  boot.cpp  sbi.cpp  trap.cpp
arch/riscv/asm/: boot.S
arch/riscv/includes/: arch.h  riscv.h
arch/riscv64/: boot.c  boot.cpp  percpu.c  percpu.cpp  sbi.c  sbi.cpp  trap.c  trap.cpp
arch/riscv64/asm/: boot.S
arch/riscv64/includes/: riscv.h  riscv64.h
configs/: generic.toml  test-config.toml
drivers/: driver.c  virtio.c
drivers/block/: virtio-blk.c
drivers/includes/: driver-header.h  driver.h  interrupt.h  rtc.h  serial.h  virtio.h
drivers/rtc/: pl031.c
drivers/serial/: pl011.c  us16550.c
drivers/serial/us16550/: us16550.c  us16550.cpp
includes/: arch.h  assert.h  common.h  console.h  define.h  errno.h  inttypes.h  percpu.h  stdio.h  stdlib.h  string.h
includes/asm/: linkage.h
kernel/: console.c  console.cpp  kernel.c  kernel.cpp  tests.c
libs/buddy_alloc/: buddy_alloc.c  buddy_alloc.cpp  buddy_alloc.h
libs/buddy_alloc/includes/: buddy_alloc.h
libs/elf_parser/includes/: elf_parser.h
libs/elf_parser/src/: elf.c
libs/lwext4/: CMakeLists.txt  fs.c  lwext4.c
libs/lwext4/includes/: ext4.h  ext4_balloc.h  ext4_bcache.h  ext4_bitmap.h  ext4_block_group.h  ext4_blockdev.h  ext4_config.h  ext4_debug.h  ext4_dir.h  ext4_dir_idx.h  ext4_errno.h  ext4_extent.h  ext4_fs.h  ext4_hash.h  ext4_ialloc.h  ext4_inode.h  ext4_journal.h  ext4_mbr.h  ext4_misc.h  ext4_mkfs.h  ext4_oflags.h  ext4_super.h  ext4_trans.h  ext4_types.h  ext4_xattr.h
libs/lwext4/includes/misc/: queue.h  tree.h
libs/lwext4/src/: ext4.c  ext4_balloc.c  ext4_bcache.c  ext4_bitmap.c  ext4_block_group.c  ext4_blockdev.c  ext4_crc32.c  ext4_debug.c  ext4_dir.c  ext4_dir_idx.c  ext4_extent.c  ext4_fs.c  ext4_hash.c  ext4_ialloc.c  ext4_inode.c  ext4_journal.c  ext4_mbr.c  ext4_mkfs.c  ext4_super.c  ext4_trans.c  ext4_xattr.c
libs/smoldtb/: README.md  smoldtb.c  smoldtb.cpp  smoldtb.h
libs/smoldtb/includes/: smoldtb.h
libs/std_impl/: assert.c  assert.cpp  console.c  impl.c  kernel.h  printf.c  printf.cpp  tinyprintf.c
libs/vfs/includes/: vfs.h
libs/virtio/: virtio-blk.c  virtio.h
linker/: linker-aarch64.ld  linker-general.ld  linker-riscv64.ld
utils/: arch.lua  command.cmake  compile.cmake  gen_config.py  options.lua  qemu.lua  rules.lua  utils.cmake
